GNOME Bugzilla – Bug 746817
GtkRadioButton keynav uses wrong succession
Last modified: 2015-03-29 04:28:11 UTC
Created attachment 300357 [details] wrong keynav succession When using a group of Radiobuttons as in the attached example, the keyboard navigation (keynav) does not work correctly. Using the down-arrow on the keyboard in fact results in the selection passed upwards instead of downwards. Using the up-arrow passes the selection downwards instead of upwards. The described behavior disappears when the length of the second label "BB" is set shorter (e.g. to "B"). It also disappears when removing the "halign"-properties of the first and third radiobutton (not the second radiobutton).